# ppm_steganography

./: Cargo.toml  README.md
examples/: decode.rs  decode_img.rs  encode.rs  encode_img.rs  hidden_image.ppm  kiwi.ppm  kiwi_hidden_image.ppm  kiwi_message.ppm  to_hide.ppm
src/: lib.rs
