[package]
name = "ppm_steganography"
description = "A small crate to hide data using 2 lsb of each bytes into a ppm image"
authors = ["Elian Ducheyne <elian.ducheyne@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/KiwiDch/stegano"
license = "MIT OR Apache-2.0"
keywords = ["ppm","stegano","steganography","hide"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.3", features = ["pnm"]}
